--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -3,15 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <title>Individual Post</title>
 </head>
 <body>
-<div class="card" th:each="post : ${post}">
+<div th:replace="fragments/navbar :: main-navbar"></div>
+<div class="container">
+
+<div class="card" th:each="post : ${posts}">
     <h1 th:text="${post.title}"></h1>
     <p th:text="${post.body}"></p>
 
-    <input type="hidden" name="id" th:value="${post.id}">
-</div>
 
+    <a th:href="@{'/posts/' + ${post.id} + '/edit'}" class="btn btn-primary btn-sm">Edit</a>
+    <form th:action="@{'/posts/' + ${post.id} + '/delete'}" method="post">
+        <button class="btn btn-danger btn-block">Delete Post</button>
+    </form>
+</div>
+</div>
+<div th:replace="fragments/footer :: main-footer"></div>
 </body>
 </html>
