one to many in user class added

--- a/src/main/resources/static.css/style.css
+++ b/src/main/resources/static.css/style.css
@@ -4,4 +4,8 @@
 
 header.jumbotron {
     margin: 0 !important;
+    background-image: url('../static.css/springblogimage.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+
 }
