--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
 
 <!-- Footer -->
 
-    <nav class="navbar fixed-bottom navbar-light bg-light" th:fragment="main-footer">
+    <nav class="navbar bottom navbar-light bg-light" th:fragment="main-footer">
         <a class="navbar-brand" href="#">Fixed bottom</a>
     </nav>
 
