navbar links added, functionality to display user who made the post added, homepageadded

--- a/src/main/resources/static.css/style.css
+++ b/src/main/resources/static.css/style.css
@@ -4,8 +4,9 @@
 
 header.jumbotron {
     margin: 0 !important;
-    background-image: url('../static.css/springblogimage.jpg');
+    background-image: url('static.css/springblogimage.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 
 }
+
