--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 <div th:replace="fragments/navbar :: main-navbar"></div>
-<div class="container">
+<div class="container mx-auto mt-3">
 
-<div class="card" th:each="post : ${posts}">
+<div class="card" th:each="post : ${post}">
     <h1 th:text="${post.title}"></h1>
     <p th:text="${post.body}"></p>
+    <p> Posted By: <span th:text="${post.user.email}"></span></p>
 
 
     <a th:href="@{'/posts/' + ${post.id} + '/edit'}" class="btn btn-primary btn-sm">Edit</a>
