--- a/src/main/resources/templates/posts/home.html
+++ b/src/main/resources/templates/posts/home.html
@@ -12,11 +12,11 @@
     <h1 class="display-3 text-center">Welcome!</h1>
 </header>
 
-<div class="container mx-auto">
+<div class="container mx-auto w-75">
     <div class = "row">
          <div class="col-md-6 col-lg-4">
 
-                <div class="card" style="width: 18rem;"><img alt="Card image cap" class="card-img-top img-fluid" src="../../static.css/pic5.jpg" />
+                <div class="card p-3" style="width: 18rem;"><img alt="Card image cap" class="card-img-top img-fluid" src="../../static.css/pic4.jpg" />
 <!--        <img class="card-img-top" src="../../static.css/springblogimage.jpg" alt="Card image cap">-->
                     <div class="card-body" >
                         <p class="card-text">See All The Posts</p>
@@ -26,7 +26,7 @@
          </div>
 
 
-        <div class="card" style="width: 18rem;">
+        <div class="card p-3" style="width: 18rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
                     <p class="card-text">Create A Post</p>
