--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -12,14 +12,14 @@
         <h1 class="display-3 text-center">Make A Post</h1>
     </header>
     <div class="card p-3">
-        <form th:action="${'/posts/create'}" th:method="post">
+        <form th:action="${'/posts/create'}" th:method="post" th:object="${post}">
             <div class="form-group">
                 <label for="title">Title</label>
-                <input class="form-control" id="title" type="text"  name="title">
+                <input class="form-control" id="title" type="text"  name="title" th:field="*{title}">
             </div>
             <div class="form-group">
                 <label for="body">Body</label>
-                <textarea class="form-control" id="body" name="body"></textarea>
+                <textarea class="form-control" id="body" name="body" th:field="*{body}"></textarea>
             </div>
             <button class="btn btn-primary btn-block">Update</button>
         </form>
