--- a/src/main/resources/templates/posts/home.html
+++ b/src/main/resources/templates/posts/home.html
@@ -6,7 +6,6 @@
     <link href="../../static.css/style.css" rel="stylesheet">
     <title>Title</title>
 </head>
-<body>
 <div th:replace="fragments/navbar :: main-navbar"></div>
 <header class="jumbotron">
     <h1 class="display-3 text-center">Welcome!</h1>
@@ -16,7 +15,7 @@
     <div class = "row">
          <div class="col-md-6 col-lg-4">
 
-                <div class="card p-3" style="width: 18rem;"><img alt="Card image cap" class="card-img-top img-fluid" src="../../static.css/pic4.jpg" />
+                <div class="card p-3 border-0" style="width: 18rem;"><img class="card-img-top img-fluid" src="" alt="Image Cap"/>
 <!--        <img class="card-img-top" src="../../static.css/springblogimage.jpg" alt="Card image cap">-->
                     <div class="card-body" >
                         <p class="card-text">See All The Posts</p>
@@ -25,16 +24,16 @@
                 </div>
          </div>
 
-
-        <div class="card p-3" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="col-md-6 col-lg-4">
+        <div class="card p-3 border-0" style="width: 18rem;">
+            <img class="card-img-top" src="..." alt="">
             <div class="card-body">
                     <p class="card-text">Create A Post</p>
                         <a href="/posts/create" class="btn btn-primary">Create A Post</a>
+            </div>
             </div>
         </div>
     </div>
 </div>
 
-</body>
 </html>
