--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <div th:replace="fragments/navbar :: main-navbar"></div>
-<div class="container mt-3">
-    <header class="jumbotron my-3">
-        <h1 class="display-3 text-center">Make A Post</h1>
-    </header>
-    <div class="card p-3">
+<header class="jumbotron">
+    <h1 class="display-3 text-center">Create A Post!</h1>
+</header>
+<div class="container mt-3 mb-3">
+    <div class="card p-3 border-0">
         <form th:action="${'/posts/create'}" th:method="post" th:object="${post}">
             <div class="form-group">
                 <label for="title">Title</label>
