--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -9,11 +9,11 @@
 <body>
 <div th:replace="fragments/navbar :: main-navbar"></div>
 <header class="jumbotron" src="../static.css/springblogimage.jpg">
-    <h1 class="display-3 text-center" >Featured Posts</h1>
+    <h1 class="display-3 text-center"  >Featured Posts</h1>
 </header>
-<div class="container">
+<div class="container h-100 mt-3 mb-3">
 
-<div class="card"  th:each="post : ${posts}">
+<div class="card border-0"  th:each="post : ${posts}">
     <div class="card-body" >
     <a th:href="@{'posts/' + ${post.id}}" th:text="${post.title}"></a>
 
