--- a/src/main/resources/static.css/style.css
+++ b/src/main/resources/static.css/style.css
@@ -10,3 +10,12 @@ header.jumbotron {
 
 }
 
+/*.carousel-item.active{*/
+/*    height:500px;*/
+
+/*}*/
+/*.carousel-item img{*/
+/*    width:100%;*/
+/*    height:100%;*/
+/*}*/
+
