--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -46,10 +46,15 @@
 <!--                </div>-->
 <!--            </li>-->
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <form class="form-inline my-2 my-lg-0" th:action="'/posts'" th:method="get" >
+            <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
         </form>
+
+            <form th:action="@{/logout}" th:method="post">
+                <button class="btn btn-outline-primary my-2 my-sm-0" style="margin-top: 8px">Logout</button>
+            </form>
+
     </div>
 </nav>
 
