--- a/src/main/resources/templates/posts/home.html
+++ b/src/main/resources/templates/posts/home.html
@@ -24,21 +24,21 @@
                 <img class="d-block w-100 h-100"  src="https://images.unsplash.com/photo-1568598035424-7070b67317d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=749&q=80 " alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h1>Jobs</h1>
-                    <p>...</p>
+                    <p>Find A Side Gig Or Your Dream Job</p>
                 </div>
             </div>
             <div class="carousel-item" style="height: 500px;">
                 <img class="d-block w-100" src="https://images.unsplash.com/photo-1464082354059-27db6ce50048?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80 " alt="Second slide" style="height: 500px;">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 class="text-dark">Housing</h1>
-                    <p>...</p>
+                    <h1>Housing</h1>
+                    <p></p>
                 </div>
             </div>
             <div class="carousel-item" style="height: 500px;">
                 <img class="d-block w-100 h-100" src="https://images.unsplash.com/photo-1502872364588-894d7d6ddfab?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80 " alt="Third slide" style="height: 500px;">
                 <div class="carousel-caption d-none d-md-block">
                     <h1>Events</h1>
-                    <p>...</p>
+                    <p></p>
                 </div>
             </div>
         </div>
@@ -77,11 +77,11 @@
 
         <div class="col-md-6 col-lg-4">
 
-            <div class="card p-3 border-0" style="width: 18rem;"><img class="card-img-top img-fluid" src="" alt=""/>
+            <div class="card p-4 border-0" style="width: 18rem;"><img class="card-img-top img-fluid" src="" alt=""/>
                 <!--        <img class="card-img-top" src="../../static.css/springblogimage.jpg" alt="Card image cap">-->
                 <div class="card-body" >
-                    <p class="card-text">Have an account? Login! Need An Account? Register!</p>
-                    <a href="/posts" class="btn btn-primary">Register/Login</a>
+                    <p class="card-text">Need An Account?</p>
+                    <a href="/sign-up" class="btn btn-primary mt-3">Register</a>
                 </div>
             </div>
         </div>
