--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -6,20 +6,26 @@
     <link href="../../static.css/style.css" rel="stylesheet">
     <title>Showing All The Posts</title>
 </head>
-<body>
+<body class="h-100">
+
+
 <div th:replace="fragments/navbar :: main-navbar"></div>
 <header class="jumbotron" src="../static.css/springblogimage.jpg">
-    <h1 class="display-3 text-center"  >Featured Posts</h1>
+    <h1 class="display-3 text-center" >Featured Posts</h1>
 </header>
 <div class="container h-100 mt-3 mb-3">
+
+    <div th:if="${posts.size() == 0}">
+        <h1 class="row justify-content-md-center mt-5">No such posts exist</h1>
+    </div>
 
 <div class="card border-0"  th:each="post : ${posts}">
     <div class="card-body" >
     <a th:href="@{'posts/' + ${post.id}}" th:text="${post.title}"></a>
 
-<!--    <h1 th:text="${post.title}"></h1>-->
     <p th:text="${post.body}"></p>
     </div>
+
 
 <!--    <input type="hidden" name="id" th:value="${post.id}">-->
 </div>
